--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,8 @@
             android:label="@string/app_name"
             android:theme="@style/Theme.FallDetectorApp" />
         <activity android:name=".activities.ContactActivity" />
+        <activity android:name=".activities.YourDataActivity" />
+
 
     </application>
 
