--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
             android:theme="@style/Theme.FallDetectorApp" />
         <activity android:name=".activities.ContactActivity" />
         <activity android:name=".activities.YourDataActivity" />
+        <activity android:name=".activities.AlarmsActivity" />
 
 
     </application>
