--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,8 +39,9 @@
             android:theme="@style/Theme.FallDetectorApp" />
         <activity android:name=".activities.ContactActivity" />
         <activity android:name=".activities.YourDataActivity" />
-        <activity android:name=".activities.AlarmsActivity" />
+        <activity android:name=".activities.AlarmsActivityML" />
         <activity android:name=".activities.AccidentActivity" />
+        <activity android:name=".activities.SupervisorActivity" />
 
     </application>
 
