przed poprawkami ( tylko zmienioine model user -> dodanie dwohc ostatnich )

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
             android:theme="@style/Theme.FallDetectorApp" />
         <activity android:name=".activities.ContactActivity" />
         <activity android:name=".activities.YourDataActivity" />
-        <activity android:name=".activities.AlarmsActivityML" />
+        <activity android:name=".activities.AlarmsActivity" />
         <activity android:name=".activities.AccidentActivity" />
         <activity android:name=".activities.SupervisorActivity" />
 
